--- a/maxime/css.css
+++ b/maxime/css.css
@@ -5,87 +5,117 @@
 
 body {
     font-family: Andy ;
-    background-color: silver;
+    background-color: rgb(95, 95, 95);
     color: aliceblue;
 }
 a:link {  /* lien non visité*/
-  color: brown; /*bleu clair*/
-
+  color: whitesmoke;
 }
 a:visited {  /*lien visité*/
-  color: green;
+  color: silver ;
 } 
 a:hover { /*lorsque le pointeur de la souris survole un lien*/
-  color: grey;
+  color:red;
   font-style: italic;
 }
 
 header{
 	width: 100%;
-	top: 0px;
-	left: 0px;
-	position: absolute;
+	top: 0vh;
+	left: 0vh;
+	position: fixed;
+	background-color: #2d2d2d;
 }
 
 header img{
-	float: left;
+	float: right;
+	width: 50px;
+	height: 50px;
 }
-.groot{
-	margin-top: 130px;
+
+.adulte{
+	float: left ;
+	margin-right: 5px ;
+}
+.ado{
+	width: 200px;
+	height: 300px;
+}
+.bebe{
+	width: 350px;
+	height: 200px;
 }
 
 h1{
 	text-align: center;
-	font-size: 35px;
+	font-size: 25px;
 }
 
 aside{
-	background-color: red;
 	border: 2px solid;
 	float: right;
 	width: 15%;
-	height: 300px;
 	top: 120px;
-	position: relative;
+	box-shadow: 6px 6px 0px #2d2d2d;
 }
+
 
 nav{
 	border: 2px solid black;
 	float: left;
-	width: 10%;
+	width: 10vh;
 	top: 120px;
-	position: relative;
+	height: 75vh;
+	padding-right: 2px;
+	box-shadow: 6px 6px 0px #2d2d2d;
+	position: fixed;
+	text-align: left;
 }
-
+nav ul{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+div {
+	border : 2px solid transparent;
+	width : 70%;
+	display: grid;
+	grid-row: 2;
+	grid-template-columns: 1fr;
+	margin-top: 100px;
+	margin-bottom: 60px;
+	margin-left: auto;
+	margin-right: auto;
+}
 section{
 	top: 120px;
 	border: 2px solid;
-	width: fit-content;
-	margin-left: 20%;
-	margin-right: 20%;
-	position: relative;
+	margin: auto ;
 	margin-top: 30px;
+	box-shadow: 6px 6px 0px #2d2d2d;
+}
+.grid{
+	height: auto;
+	width: auto;
+}
+div div{
+	margin-top: 0px;
+	width: auto;
+	display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0px;
 }
 
-.sec1{
-	width: 60%;
-}
-
-.sec2{
-	float: left;
-	margin-right: 0%;
-	width: 30%;
-}
-
-.sec3{
-	float: right;
-	margin-left: auto;
-	margin-right: 5%;
-}
 footer{
 	width: 100%;
 	text-align: center;
-	position: absolute;
+	line-height: 0px;
+	position: fixed;
 	bottom: 0px;
 	left: 0px;
+	background-color: #2d2d2d;
+}
+footer img{
+	width: 20px;
+	height: 20px;
 }
