--- a/maxime/css.css
+++ b/maxime/css.css
@@ -130,7 +130,7 @@ footer img{
 	height: 20px;
 	bottom: 0ch;
 }
-footer article{
+footer p{
 	float:right;
 	margin: 10px 10px 10px 10px;
 	position: absolute;
